swagger change PUT users
